<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="5sp"

        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="right"
                android:gravity="center|right"
                android:paddingLeft="5sp"
                android:paddingRight="5sp">


                <TableRow
                    android:layout_gravity="right"
                    android:foregroundGravity="right"
                    android:gravity="center_vertical|right"
                    android:padding="3sp">

                    <TextView
                        android:id="@+id/cv_gamer_name"
                        android:layout_width="fill_parent"
                        android:layout_weight="0.9"

                        android:gravity="right"
                        android:text="456546546576"
                        android:textIsSelectable="false"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_weight="0.3"
                        android:text="@string/gamer_fname"
                        android:textIsSelectable="false"
                        android:textSize="16sp" />


                </TableRow>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/card_view_rows" />

                <TableRow
                    android:layout_gravity="right"
                    android:foregroundGravity="right"
                    android:gravity="center_vertical|right"
                    android:padding="3sp">

                    <TextView
                        android:id="@+id/cv_gamer_phone"
                        android:layout_width="fill_parent"
                        android:layout_weight="0.9"
                        android:gravity="right"
                        android:text="تامین اجتماعی "
                        android:textIsSelectable="false"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_weight="0.3"
                        android:text="@string/phone_number"
                        android:textIsSelectable="false"
                        android:textSize="16sp" />


                </TableRow>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/card_view_rows" />

                <TableRow
                    android:gravity="center_vertical|right"
                    android:padding="3sp">

                    <TextView
                        android:id="@+id/cv_gamer_member"
                        android:layout_width="fill_parent"
                        android:layout_weight="0.9"
                        android:gravity="right"
                        android:text="ازاد"
                        android:textIsSelectable="false"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="28dp"
                        android:layout_weight="0.3"
                        android:text="@string/gamer_member_number"
                        android:textIsSelectable="false"
                        android:textSize="16sp" />


                </TableRow>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/card_view_rows" />

                <TableRow
                    android:gravity="center_vertical|right"
                    android:padding="3sp">

                    <TextView
                        android:id="@+id/cv_gamer_reg_time"
                        android:layout_width="fill_parent"
                        android:layout_weight="0.9"
                        android:gravity="right"
                        android:text="95/6/8"
                        android:textIsSelectable="false"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_weight="0.3"
                        android:text="@string/Registration_time"
                        android:textIsSelectable="false"
                        android:textSize="16sp" />


                </TableRow>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/card_view_rows" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/card_view_rows" />


            </TableLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:padding="5sp"
                android:background="@color/violet" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <TableRow
                    android:padding="5sp"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <info.hoang8f.widget.FButton
                        android:id="@+id/btn_edit"
                        android:layout_width="55sp"
                        android:layout_height="45sp"
                        android:layout_weight="1"
                        android:text="@string/show_qrcode"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        fbutton:buttonColor="@color/fbutton_color_peter_river"
                        fbutton:cornerRadius="5dp"
                        fbutton:shadowColor="@color/fbutton_color_belize_hole"
                        fbutton:shadowEnabled="true"


                        fbutton:shadowHeight="5dp" />
                </TableRow>

                <TableRow
                    android:padding="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <info.hoang8f.widget.FButton
                        android:id="@+id/btn_delete"
                        android:layout_width="55sp"
                        android:layout_height="45sp"
                        android:layout_weight="1"
                        android:text="@string/delete"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        fbutton:buttonColor="@color/fbutton_color_alizarin"
                        fbutton:cornerRadius="5dp"
                        fbutton:shadowColor="@color/fbutton_color_pumpkin"
                        fbutton:shadowEnabled="true"
                        fbutton:shadowHeight="5dp" />
                </TableRow>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>