<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
android:background="@color/fbutton_color_transparent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="10sp"
        card_view:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp"


            >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">




                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|right"
                    android:padding="6dp">

                    <EditText
                        android:id="@+id/gamer_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:inputType="text"
                        android:gravity="center"

                        android:paddingBottom="5dp"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:paddingTop="5dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|right"
                        android:text="@string/gamer_fname"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/text_color" />
                </TableRow>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/card_view_rows" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|right"
                    android:padding="6dp">

                    <EditText
                        android:id="@+id/gamer_phone_numer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"

                        android:layout_weight="0.7"
                        android:inputType="number"
                        android:paddingBottom="5dp"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:paddingTop="5dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|right"
                        android:text="@string/phone_number"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/text_color" />
                </TableRow>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/card_view_rows" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|right"
                    android:padding="6dp">

                    <EditText
                        android:id="@+id/gamer_member_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:inputType="number"
                        android:gravity="center"

                        android:paddingBottom="5dp"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:paddingTop="5dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|right"
                        android:text="@string/gamer_member_number"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/text_color" />
                </TableRow>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/card_view_rows" />


                <TableRow
                    android:padding="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center">


                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp">

                        <info.hoang8f.widget.FButton
                            android:id="@+id/cancel"

                            android:layout_marginRight="20sp"
                            android:layout_weight="1"
                            android:padding="20sp"
                            android:text="@string/cancel"
                            android:textColor="#ffffff"
                            fbutton:buttonColor="@color/fbutton_color_orange"
                            fbutton:cornerRadius="5dp"
                            fbutton:shadowColor="@color/fbutton_color_orange"
                            fbutton:shadowEnabled="true"
                            fbutton:shadowHeight="5dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp">

                        <info.hoang8f.widget.FButton
                            android:id="@+id/submit"
                            android:layout_marginLeft="20sp"
                            android:padding="20sp"
                            android:text="@string/submit"
                            android:textColor="#ffffff"
                            fbutton:buttonColor="@color/colorPrimaryNew"
                            fbutton:cornerRadius="5dp"


                            fbutton:shadowColor="@color/fbutton_color_silver"
                            fbutton:shadowEnabled="true"
                            fbutton:shadowHeight="5dp" />
                    </TableRow>


                </TableRow>

            </TableLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>